# emotion-cube

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: EmulatorCanvas.tsx  layout.tsx  page.tsx
src/: cpu.rs  dmac.rs  ee.rs  gif.rs  gs.rs  gs_display.rs  gs_rasterizer.rs  lib.rs  vif1.rs  vu.rs  vu1.rs  vu1_program.rs
